--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -115,6 +115,7 @@
   "copy_code": "Copy code",
   "copy_now_your_api_key_you_wont_be_able_to_see_it_again": "Copy now your API key you won't be able to see it again",
   "copy_to_clipboard": "Copy",
+  "create": "Create",
   "create-a-new-account": "Sign up",
   "create-account": "Create Account",
   "create-apikey": "Create API key",
@@ -124,6 +125,7 @@
   "create-directory": "Create Directory",
   "create-directory-connection": "Create Directory Connection",
   "create-directory-message": "Automatically provision and de-provision users with your directory provider.",
+  "create-folder": "Create folder",
   "create-new-assistant": "Create a new assistant",
   "create-oidc-connection": "Create OIDC Connection",
   "create-saml-connection": "Create SAML Connection",
@@ -151,12 +153,14 @@
   "create_tool_field_promptfragment_placeholder": "Instructions added to the system prompt...",
   "create_user": "Create user",
   "created-at": "Created At",
+  "creative": "Creative",
   "credentials": "Credentials",
   "current-password": "Current Password",
   "custom": "Custom",
   "custom-range": "Custom Range",
   "daily-usage": "Daily Usage",
   "dashboard": "Dashboard",
+  "default": "Default",
   "default-redirect-url": "Default redirect URL",
   "default_": "Default",
   "default_model": "Default model",
@@ -178,8 +182,10 @@
   "directory-sync": "Directory Sync",
   "directory-sync-message": "Directory Sync Provider will ask you for the following information to configure your SCIM app.",
   "directory-sync-provider": "Directory Sync Provider",
+  "disable-password-login": "Disable password login",
   "discovery-url": "Discovery URL",
   "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
+  "docx": "DOCX",
   "dont-have-an-account": "Don't have an account?",
   "download": "Download",
   "download_as_csv": "Download as csv",
@@ -207,16 +213,23 @@
   "everyone_in_the_company": "Everyone in the company",
   "everyone_in_the_company_will_be_able_to_use_this_assistant": "Everyone in the company will be able to use this assistant",
   "everyone_in_the_company_will_be_able_to_use_this_tool": "Everyone in the company will be able to add this tool to assistants",
+  "expiration": "Expiration",
+  "export": "Export",
   "failed_creating_link": "Failed creating link",
   "failed_sending_message": "Failed sending message",
   "failed_sending_message_not_authorized": "You're not authorized to add messages to this conversation",
   "failed_updating_links": "Failed updating links",
   "features": "Features",
+  "folder": "Folder",
+  "folder-successfully-created": "Folder successfully created",
+  "folders": "Folders",
   "found_an_unsaved_version": "Found an unsaved version",
   "frequently-asked": "Frequently asked questions",
   "from": "From",
   "gcpvertex_backend": "Gcp Vertex",
+  "gemini-backend": "Gemini",
   "general": "General",
+  "generic-error": "An error occurred",
   "get-started": "Get Started",
   "goto_chats": "Go to chats",
   "hi": "Hi",
@@ -227,6 +240,7 @@
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
   "important_logicle_is_100%_unaffiliated_with_openai": "Important: Logicle is 100% unaffiliated with OpenAI",
   "informations": "Informations",
+  "insert-xml-describing-saml-provider": "Insert the XML describing the SAML provider",
   "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
   "insert_apikey_placeholder": "Insert an API key...",
@@ -262,6 +276,8 @@
   "logout": "Logout",
   "low": "Low",
   "manage-members": "Manage members",
+  "markdown": "Markdown",
+  "mcp-sse-endpoint-placeholder": "Enter the MCP SSE endpoint",
   "medium": "Medium",
   "member-deleted": "Member deleted successfully.",
   "member-role-updated": "Member role updated successfully.",
@@ -280,6 +296,8 @@
   "my-assistants": "My assistants",
   "my-profile": "My profile",
   "name": "Name",
+  "neutral": "Neutral",
+  "never": "Never",
   "new-api-key": "New API key",
   "new-api-key-description": "API keys allow your app to communicate the API.",
   "new-api-warning": "Save this API key somewhere safe. You won't be able to see it again once you close this dialog.",
@@ -291,8 +309,12 @@
   "next_message": "Next message",
   "no-active-workspace": "You do not have any active workspace.",
   "no-api-key-description": "API keys allow your app to communicate with app",
+  "no-credentials": "No credentials found.",
+  "no-data": "No data.",
   "no-files-uploaded": "No files uploaded yet",
   "no-models-found": "No models found.",
+  "no-results": "No results",
+  "no-workspace-found": "No workspace found",
   "no_files_uploaded": "No files uploaded",
   "no_filter": "No filter",
   "no_such_user": "No such user",
@@ -303,10 +325,11 @@
   "oidc": "OIDC",
   "ok": "Ok",
   "older": "Older",
+  "one-user-selected": "One user selected",
   "only-me": "Only me",
   "only_you_will_have_access_to_this_assistant": "Only you will have access to this assistant",
   "only_you_will_have_access_to_this_tool": "Only you will be able to add this tool to an assistant",
-  "openai_backend": "OpenAI",
+  "openai-backend": "OpenAI",
   "openapi_spec": "OpenAPI spec",
   "options": "Options",
   "or-sign-in-with": "Or Sign In With",
@@ -321,6 +344,7 @@
   "password-successfully-updated": "Password has been successfully updated",
   "period": "Period",
   "perplexity_backend": "Perplexity",
+  "precise": "Precise",
   "preferences": "Preferences",
   "preview": "Preview",
   "previous-week": "Previous 7 Days",
@@ -338,6 +362,7 @@
   "reasoning_effort": "Reasoning effort",
   "recover": "Recover",
   "redirect-url": "Redirect URL",
+  "remote-auth-failure": "Remote authentication failed",
   "remove": "Remove",
   "remove-assistant": "Remove assistant",
   "remove-assistant-confirmation": "Are you sure you want to remove this assistant? This action cannot be undone",
@@ -357,9 +382,11 @@
   "remove-workspace-confirmation": "Are you sure you want to delete the workspace? Deleting the workspace will delete all resources and data associated with the workspace forever.",
   "remove-workspace-warning": "Deleting the workspace will delete all resources and data associated with the workspace forever. This action cannot be undone.",
   "rename": "Rename",
+  "resend-this-message": "Resend this message",
   "reset-password": "Reset Password",
   "restore_this_version": "Restore this version",
   "result": "Result",
+  "retry": "Retry",
   "revoke": "Revoke",
   "revoke-api-key": "Revoke API key",
   "revoke-api-key-confirm": "Are you sure you want to revoke this API key? This action can not be undone.",
@@ -378,6 +405,7 @@
   "search_chats": "Search chats",
   "search_placeholder": "Search...",
   "search_workspaces...": "Search workspaces...",
+  "searching": "Searching",
   "select-auth-mode": "Select auth mode",
   "select-members-to-add": "Select workspace members",
   "select-role-placeholder": "Select a role...",
@@ -411,6 +439,7 @@
   "sign-up-message": "Signing up signifies that you have read and agree to the Terms of Service and our Privacy Policy.",
   "signature_algorithm": "Signature Algorithm",
   "single-sign-on": "Single Sign On",
+  "something-went-wrong": "Something went wrong",
   "sources": "Fonti",
   "sp_acs_url": "ACS (Assertion Consumer Service) URL / Single Sign-On URL / Destination URL",
   "sp_entity_id": "SP Entity ID / Identifier / Audience URI / Audience Restriction",
@@ -450,6 +479,7 @@
   "table-column-user-role": "Role",
   "tags": "Tags",
   "temperature": "Temperature",
+  "temperature-help": "Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.",
   "text-letter": "T",
   "the_system": "The sistem",
   "this-month": "This month",
@@ -462,6 +492,7 @@
   "token-limit": "Token Limit",
   "tool-successfully-created": "Tool has been successfully created",
   "tool-successfully-deleted": "Tool has been successfully deleted",
+  "tool-successfully-updated": "Tool has been successfully updated",
   "tool_call_result": "Tool call result",
   "tools": "Tools",
   "try_send_message_again": "Invia di nuovo",
@@ -469,6 +500,7 @@
   "unknown-error": "Unknown Error",
   "unpublished_edits": "Unpublished edits",
   "unsupported_file_format": "Unsupported file format",
+  "untitled-conversation": "Untitled conversation",
   "update-account": "Update Account",
   "update-password": "Update Password",
   "update_links": "Update links",
@@ -478,6 +510,7 @@
   "user-deleted": "User successfully deleted",
   "users": "Users",
   "value_is_too_short": "Value is too short",
+  "version": "Version",
   "version_chronology": "Version chronology",
   "vision": "Vision",
   "welcome_to_logicle": "Welcome to Logicle",
