--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -115,6 +115,7 @@
   "copy_code": "Copia codice",
   "copy_now_your_api_key_you_wont_be_able_to_see_it_again": "Copia ora la tua API key, non potrai più vederla in seguito",
   "copy_to_clipboard": "Copia",
+  "create": "Crea",
   "create-a-new-account": "Registrati",
   "create-account": "Crea Account",
   "create-apikey": "Crea API key",
@@ -124,6 +125,7 @@
   "create-directory": "Crea Directory",
   "create-directory-connection": "Crea Connessione Directory",
   "create-directory-message": "Provisiona e de-provisiona automaticamente gli utenti con il tuo provider di directory.",
+  "create-folder": "Crea cartella",
   "create-new-assistant": "Crea un nuovo assistente",
   "create-oidc-connection": "Crea Connessione OIDC",
   "create-saml-connection": "Crea Connessione SAML",
@@ -151,12 +153,14 @@
   "create_tool_field_promptfragment_placeholder": "Istruzioni aggiunte al system prompt...",
   "create_user": "Crea utente",
   "created-at": "Data creazione",
+  "creative": "Creativo",
   "credentials": "Credenziali",
   "current-password": "Password Attuale",
   "custom": "Personalizzato",
   "custom-range": "Intervallo personalizzato",
   "daily-usage": "Utilizzo Giornaliero",
   "dashboard": "Dashboard",
+  "default": "Predefinito",
   "default-redirect-url": "URL di reindirizzamento predefinito",
   "default_": "Predefinito",
   "default_model": "Modello predefinito",
@@ -178,8 +182,10 @@
   "directory-sync": "Sincronizzazione Directory",
   "directory-sync-message": "Il provider di sincronizzazione directory ti chiederà le seguenti informazioni per configurare la tua app SCIM.",
   "directory-sync-provider": "Provider di Sincronizzazione Directory",
+  "disable-password-login": "Disabilita accesso con password",
   "discovery-url": "URL di Scoperta",
   "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
+  "docx": "DOCX",
   "dont-have-an-account": "Non hai un account?",
   "download": "Scarica",
   "download_as_csv": "Scarica in formato csv",
@@ -207,16 +213,23 @@
   "everyone_in_the_company": "Tutta l'azienda",
   "everyone_in_the_company_will_be_able_to_use_this_assistant": "Tutta l'azienda potrà utilizzare questo assistente",
   "everyone_in_the_company_will_be_able_to_use_this_tool": "Tutta l'azienda potrà aggiungere questo tool agli assistenti",
+  "expiration": "Scadenza",
+  "export": "Esporta",
   "failed_creating_link": "Errore nella creazione del link",
   "failed_sending_message": "Errore nell'invio del messaggio",
   "failed_sending_message_not_authorized": "Non sei autorizzato ad aggiungere messaggi a questa conversazione",
   "failed_updating_links": "Errore nell'aggiornamento dei link",
   "features": "Caratteristiche",
+  "folder": "Cartella",
+  "folder-successfully-created": "Cartella creata con successo",
+  "folders": "Cartelle",
   "found_an_unsaved_version": "Ho trovato una versione salvata",
   "frequently-asked": "Domande frequenti",
   "from": "Da",
   "gcpvertex_backend": "Gcp Vertex",
+  "gemini-backend": "Gemini",
   "general": "Generale",
+  "generic-error": "Si è verificato un errore",
   "get-started": "Inizia Ora",
   "goto_chats": "Vai alle conversazioni",
   "hi": "Ciao",
@@ -227,6 +240,7 @@
   "identity-provider-setup": "Trova i metadata SP per la configurazione dell'Identity Provider presso",
   "important_logicle_is_100%_unaffiliated_with_openai": "Importante: Logicle è al 100% non affiliata con OpenAI",
   "informations": "Informazioni",
+  "insert-xml-describing-saml-provider": "Inserisci l'XML che descrive il provider SAML",
   "insert_a_conversation_starter_placeholder": "Inserisci un inizio di conversazione...",
   "insert_a_tag_and_press_enter": "Inserisci un tag e premi invio",
   "insert_apikey_placeholder": "Inserisci un API key...",
@@ -262,6 +276,8 @@
   "logout": "Disconnettiti",
   "low": "Basso",
   "manage-members": "Gestisci membri",
+  "markdown": "Markdown",
+  "mcp-sse-endpoint-placeholder": "Inserisci l'endpoint MCP SSE",
   "medium": "Medio",
   "member-deleted": "Membro eliminato con successo.",
   "member-role-updated": "Ruolo del membro modificato con successo.",
@@ -280,6 +296,8 @@
   "my-assistants": "I miei assistenti",
   "my-profile": "Il mio profilo",
   "name": "Nome",
+  "neutral": "Neutro",
+  "never": "Mai",
   "new-api-key": "Nuova API key",
   "new-api-key-description": "Le chiavi API consentono alla tua app di comunicare con l'API.",
   "new-api-warning": "Salva questa API key in un luogo sicuro. Non potrai rivederla una volta chiuso questo dialogo.",
@@ -291,8 +309,12 @@
   "next_message": "Messaggio successivo",
   "no-active-workspace": "Non hai alcun workspace attivo.",
   "no-api-key-description": "Le chiavi API consentono alla tua app di comunicare con l'app",
+  "no-credentials": "Nessuna credenziale trovata.",
+  "no-data": "Nessun dato.",
   "no-files-uploaded": "Nessun file caricato",
   "no-models-found": "Nessun modello trovato.",
+  "no-results": "Nessun risultato",
+  "no-workspace-found": "Nessun workspace trovato",
   "no_files_uploaded": "Nessun file uploadato",
   "no_filter": "Non filtrare",
   "no_such_user": "Utente non trovato",
@@ -303,10 +325,11 @@
   "oidc": "OIDC",
   "ok": "Ok",
   "older": "Più vecchi",
+  "one-user-selected": "Un utente selezionato",
   "only-me": "Solo io",
   "only_you_will_have_access_to_this_assistant": "Solo tu avrai accesso a questo assistente",
   "only_you_will_have_access_to_this_tool": "Solo tu potrai aggiungere questo tool ad un assistente",
-  "openai_backend": "OpenAI",
+  "openai-backend": "OpenAI",
   "openapi_spec": "Specifica OpenAPI",
   "options": "Opzioni",
   "or-sign-in-with": "Oppure Accedi Con",
@@ -321,6 +344,7 @@
   "password-successfully-updated": "Password modificata con successo",
   "period": "Periodo",
   "perplexity_backend": "Perplexity",
+  "precise": "Preciso",
   "preferences": "Preferenze",
   "preview": "Anteprima",
   "previous-week": "Ultimi 7 Giorni",
@@ -338,6 +362,7 @@
   "reasoning_effort": "Livello di ragionamento",
   "recover": "Recupera",
   "redirect-url": "URL di reindirizzamento",
+  "remote-auth-failure": "Autenticazione remota non riuscita",
   "remove": "Rimuovi",
   "remove-assistant": "Rimuovi Assistente",
   "remove-assistant-confirmation": "Sei sicuro di voler rimuovere questo assistente? Questa azione non può essere annullata.",
@@ -357,9 +382,11 @@
   "remove-workspace-confirmation": "Sei sicuro di voler eliminare il workspace? Eliminare il workspace eliminerà tutte le risorse e i dati associati per sempre.",
   "remove-workspace-warning": "Eliminare il workspace eliminerà tutte le risorse e i dati associati per sempre. Questa azione non può essere annullata.",
   "rename": "Rinomina",
+  "resend-this-message": "Invia di nuovo questo messaggio",
   "reset-password": "Reimposta Password",
   "restore_this_version": "Ripristina questa versione",
   "result": "Risultato",
+  "retry": "Riprova",
   "revoke": "Revoca",
   "revoke-api-key": "Revoca API key",
   "revoke-api-key-confirm": "Sei sicuro di voler revocare questa API key? Questa azione non può essere annullata.",
@@ -378,6 +405,7 @@
   "search_chats": "Ricerca chat",
   "search_placeholder": "Cerca...",
   "search_workspaces...": "Cerca workspace...",
+  "searching": "Ricerca in corso",
   "select-auth-mode": "Seleziona modalità di autenticazione",
   "select-members-to-add": "Seleziona membri del workspace",
   "select-role-placeholder": "Seleziona un ruolo...",
@@ -411,6 +439,7 @@
   "sign-up-message": "Registrandoti confermi di aver letto e accettato i Termini di Servizio e la nostra Informativa sulla Privacy.",
   "signature_algorithm": "Algoritmo di Firma",
   "single-sign-on": "Single Sign On",
+  "something-went-wrong": "Qualcosa è andato storto",
   "sources": "Sources",
   "sp_acs_url": "URL ACS (Assertion Consumer Service) / URL Single Sign-On / URL Destinazione",
   "sp_entity_id": "ID Entità SP / Identificativo / URI Pubblico / Restrizione Pubblico",
@@ -450,6 +479,7 @@
   "table-column-user-role": "Ruolo",
   "tags": "Etichette",
   "temperature": "Temperatura",
+  "temperature-help": "Valori più alti come 0.8 rendono l'output più casuale, mentre valori più bassi come 0.2 lo rendono più focalizzato e deterministico.",
   "text-letter": "T",
   "the_system": "Il sistema",
   "this-month": "Questo mese",
@@ -462,6 +492,7 @@
   "token-limit": "Limite Token",
   "tool-successfully-created": "Tool creato con successo",
   "tool-successfully-deleted": "Tool eliminato con successo",
+  "tool-successfully-updated": "Strumento aggiornato con successo",
   "tool_call_result": "Risultato invocazione tool",
   "tools": "Tools",
   "try_send_message_again": "Invia di nuovo il messaggio",
@@ -469,6 +500,7 @@
   "unknown-error": "Errore sconosciuto",
   "unpublished_edits": "Modifiche non pubblicate",
   "unsupported_file_format": "Formato di file non supportato",
+  "untitled-conversation": "Conversazione senza titolo",
   "update-account": "Modifica Account",
   "update-password": "Modifica Password",
   "update_links": "Aggiorna link",
@@ -478,6 +510,7 @@
   "user-deleted": "Utente eliminato con successo",
   "users": "Utenti",
   "value_is_too_short": "Valore troppo corto",
+  "version": "Versione",
   "version_chronology": "Cronologia Versione",
   "vision": "Visione",
   "welcome_to_logicle": "Benvenuto in logicle",
