Models for image generator can now be configured

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -151,6 +151,9 @@
   "create_tool_field_name_label": "Name",
   "create_tool_field_name_placeholder": "Display name of this tool...",
   "create_tool_field_promptfragment_placeholder": "Instructions added to the system prompt...",
+  "image_generator_edit_models_label": "Edit models",
+  "image_generator_generate_models_label": "Generation models",
+  "image_generator_models_placeholder": "Select or add a model",
   "create_user": "Create user",
   "created-at": "Created At",
   "creative": "Creative",
