--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -151,6 +151,9 @@
   "create_tool_field_name_label": "Nome",
   "create_tool_field_name_placeholder": "Nome visualizzato di questo tool...",
   "create_tool_field_promptfragment_placeholder": "Istruzioni aggiunte al system prompt...",
+  "image_generator_edit_models_label": "Modelli di modifica",
+  "image_generator_generate_models_label": "Modelli di generazione",
+  "image_generator_models_placeholder": "Seleziona o aggiungi un modello",
   "create_user": "Crea utente",
   "created-at": "Data creazione",
   "creative": "Creativo",
