Updated form ImageGenerator form fragment

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -155,6 +155,7 @@
   "image_generator_generate_models_label": "Generation models",
   "image_generator_models_placeholder": "Select or add a model",
   "image_generator_model_placeholder": "Auto-select",
+  "image_generator_can_edit_label": "Allow image editing",
   "create_user": "Create user",
   "created-at": "Created At",
   "creative": "Creative",
