Renamed canEdit -> supportsEditing

--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -151,11 +151,8 @@
   "create_tool_field_name_label": "Nome",
   "create_tool_field_name_placeholder": "Nome visualizzato di questo tool...",
   "create_tool_field_promptfragment_placeholder": "Istruzioni aggiunte al system prompt...",
-  "image_generator_edit_models_label": "Modelli di modifica",
-  "image_generator_generate_models_label": "Modelli di generazione",
-  "image_generator_models_placeholder": "Seleziona o aggiungi un modello",
-  "image_generator_model_placeholder": "Seleziona automaticamente",
-  "image_generator_can_edit_label": "Consenti modifica immagini",
+  "image_generator_model_placeholder": "Inserisci o seleziona un modello",
+  "image_generator_supports_editing_label": "Consenti modifica immagini",
   "create_user": "Crea utente",
   "created-at": "Data creazione",
   "creative": "Creativo",
