--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -245,6 +245,7 @@
   "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
   "tag_add": "Add \"{{tag}}\"",
+  "tag_existing": "Existing tags",
   "tag_no_suggestions": "No suggestions",
   "insert_apikey_placeholder": "Insert an API key...",
   "insert_apiurl_or_leave_blank_for_default": "Insert API url, or leave blank for default",
