Feat: auto complete tags for tools / assistants (#726)

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -244,6 +244,9 @@
   "insert-xml-describing-saml-provider": "Insert the XML describing the SAML provider",
   "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
+  "tag_add": "Add \"{{tag}}\"",
+  "tag_existing": "Existing tags",
+  "tag_no_suggestions": "No suggestions",
   "insert_apikey_placeholder": "Insert an API key...",
   "insert_apiurl_or_leave_blank_for_default": "Insert API url, or leave blank for default",
   "insert_gcp_credentials_placeholder": "Insert GCP Credentials...",
