Implemented discard action

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -433,6 +433,10 @@
   "share_with_workspace": "Share with workspace",
   "sharing": "Sharing",
   "sharing_settings": "Sharing settings",
+  "discard_changes": "Discard changes",
+  "discard_changes_title": "Discard changes?",
+  "discard_changes_message": "This will restore the assistant to the last published version.",
+  "changes_discarded": "Changes discarded",
   "show-in-sidebar": "Show in sidebar",
   "show_icons_in_chatbar": "Show icons in chat bar",
   "show_sidebar": "Show sidebar",
