--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -433,6 +433,10 @@
   "share_with_workspace": "Condividi con il workspace",
   "sharing": "Condivisione",
   "sharing_settings": "Impostazioni condivisione",
+  "discard_changes": "Annulla modifiche",
+  "discard_changes_title": "Annullare le modifiche?",
+  "discard_changes_message": "Le modifiche non pubblicate verranno scartate e l'assistente tornerà all'ultima versione pubblicata.",
+  "changes_discarded": "Modifiche annullate",
   "show-in-sidebar": "Mostra nella barra laterale",
   "show_icons_in_chatbar": "Mostra icone nella barra delle chat",
   "show_sidebar": "Mostra barra laterale",
