Per user Backend API keys

--- a/logicle/locales/en/logicle.json
+++ b/logicle/locales/en/logicle.json
@@ -10,6 +10,7 @@
   "add-members": "Add Members",
   "add-tools": "Add tools",
   "add-user": "Add user",
+  "add_credentials_for_backend_named": "Add credentials for {{name}}",
   "admin": "Admin",
   "administrator-settings": "Administrator settings",
   "advanced": "Advanced",
@@ -33,7 +34,15 @@
   "api_endpoint_placeholder": "Enter your api endpoint",
   "api_key": "API key",
   "api_key_placeholder": "Enter the API key to access the LLM APIs",
-  "api_keys": "API keys",
+  "api_key_required": "Please enter an API key.",
+  "api_key_saved": "API key saved.",
+  "api_key_source": "API key source",
+  "api_key_source_server": "Stored on server (admin)",
+  "api_key_source_server_description": "Use a single key stored with this backend.",
+  "api_key_source_user": "Provided by each user",
+  "api_key_source_user_description": "Each user must add their own API key.",
+  "api_key_user_provided_reserved": "“user_provided” is reserved. Choose “Provided by each user” instead.",
+  "api_keys": "API Keys",
   "api_url": "API url",
   "apikey-added": "API key added successfully",
   "apikey-created": "API key created",
@@ -55,6 +64,7 @@
   "assistant-successfully-created": "Assistant has been successfully created",
   "assistant-successfully-published": "Assistant has been successfully published",
   "assistant-successfully-updated": "Assistant has been successfully updated",
+  "assistant_requires_api_key_click_named": "API key needed to use {{name}}. Click to add it.",
   "assistant_restored": "Assistant successfully restored",
   "assistants": "Assistants",
   "attachment_is_too_big": "Attached file exceeds system limits",
@@ -77,6 +87,7 @@
   "change-password": "Change password",
   "change_owner": "Change owner",
   "change_role": "Change role",
+  "changes_discarded": "Changes discarded",
   "chat": "Chat",
   "chat_is_already_shared": "Chat is shared",
   "chat_response_failure": "An error happened while reading the server response",
@@ -151,12 +162,14 @@
   "create_tool_field_name_label": "Name",
   "create_tool_field_name_placeholder": "Display name of this tool...",
   "create_tool_field_promptfragment_placeholder": "Instructions added to the system prompt...",
-  "image_generator_model_placeholder": "Insert or select a model",
-  "image_generator_supports_editing_label": "Allow image editing",
   "create_user": "Create user",
   "created-at": "Created At",
   "creative": "Creative",
   "credentials": "Credentials",
+  "credentials_dialog_description": "Your credentials are stored encrypted in the database and only you can use them.",
+  "credentials_dialog_description_named": "Your credentials are stored encrypted in the database and only you can use them.",
+  "credentials_for_backend": "Credentials for backend",
+  "credentials_for_backend_named": "Credentials for {{name}}",
   "current-password": "Current Password",
   "custom": "Custom",
   "custom-range": "Custom Range",
@@ -184,6 +197,9 @@
   "directory-sync-message": "Directory Sync Provider will ask you for the following information to configure your SCIM app.",
   "directory-sync-provider": "Directory Sync Provider",
   "disable-password-login": "Disable password login",
+  "discard_changes": "Discard changes",
+  "discard_changes_message": "This will restore the assistant to the last published version.",
+  "discard_changes_title": "Discard changes?",
   "discovery-url": "Discovery URL",
   "do_you_want_to_recover_an_unsaved_version": "Do you want to recover an unsaved version?",
   "docx": "DOCX",
@@ -239,14 +255,13 @@
   "high": "High",
   "id": "Id",
   "identity-provider-setup": "Please find the SP metadata for Identity Provider configuration at",
+  "image_generator_model_placeholder": "Insert or select a model",
+  "image_generator_supports_editing_label": "Allow image editing",
   "important_logicle_is_100%_unaffiliated_with_openai": "Important: Logicle is 100% unaffiliated with OpenAI",
   "informations": "Informations",
   "insert-xml-describing-saml-provider": "Insert the XML describing the SAML provider",
   "insert_a_conversation_starter_placeholder": "Insert a conversation starter...",
   "insert_a_tag_and_press_enter": "Insert a tag and press enter",
-  "tag_add": "Add \"{{tag}}\"",
-  "tag_existing": "Existing tags",
-  "tag_no_suggestions": "No suggestions",
   "insert_apikey_placeholder": "Insert an API key...",
   "insert_apiurl_or_leave_blank_for_default": "Insert API url, or leave blank for default",
   "insert_gcp_credentials_placeholder": "Insert GCP Credentials...",
@@ -322,6 +337,7 @@
   "no_files_uploaded": "No files uploaded",
   "no_filter": "No filter",
   "no_such_user": "No such user",
+  "no_user_secrets": "No secrets saved yet.",
   "no_users_found": "No users found",
   "none": "None",
   "not_authenticated": "Not authenticated",
@@ -385,6 +401,8 @@
   "remove-workspace": "Remove Workspace",
   "remove-workspace-confirmation": "Are you sure you want to delete the workspace? Deleting the workspace will delete all resources and data associated with the workspace forever.",
   "remove-workspace-warning": "Deleting the workspace will delete all resources and data associated with the workspace forever. This action cannot be undone.",
+  "remove_secret_confirmation": "You're about to remove “{{label}}”. This action cannot be undone.",
+  "remove_secret_title": "Remove secret?",
   "rename": "Rename",
   "resend-this-message": "Resend this message",
   "reset-password": "Reset Password",
@@ -410,6 +428,12 @@
   "search_placeholder": "Search...",
   "search_workspaces...": "Search workspaces...",
   "searching": "Searching",
+  "secret_configured": "Secret configured.",
+  "secret_context": "Context",
+  "secret_name_required": "Please enter a name.",
+  "secret_removed": "Secret removed.",
+  "secret_unreadable": "Saved secret needs to be re-entered.",
+  "secrets": "Secrets",
   "select-auth-mode": "Select auth mode",
   "select-members-to-add": "Select workspace members",
   "select-role-placeholder": "Select a role...",
@@ -433,10 +457,6 @@
   "share_with_workspace": "Share with workspace",
   "sharing": "Sharing",
   "sharing_settings": "Sharing settings",
-  "discard_changes": "Discard changes",
-  "discard_changes_title": "Discard changes?",
-  "discard_changes_message": "This will restore the assistant to the last published version.",
-  "changes_discarded": "Changes discarded",
   "show-in-sidebar": "Show in sidebar",
   "show_icons_in_chatbar": "Show icons in chat bar",
   "show_sidebar": "Show sidebar",
@@ -485,6 +505,9 @@
   "table-column-sso-user": "SSO User",
   "table-column-type": "Type",
   "table-column-user-role": "Role",
+  "tag_add": "Add \"{{tag}}\"",
+  "tag_existing": "Existing tags",
+  "tag_no_suggestions": "No suggestions",
   "tags": "Tags",
   "temperature": "Temperature",
   "temperature-help": "Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.",
