--- a/logicle/locales/it/logicle.json
+++ b/logicle/locales/it/logicle.json
@@ -10,6 +10,7 @@
   "add-members": "Aggiungi Membri",
   "add-tools": "Aggiungi tool",
   "add-user": "Aggiungi Utente",
+  "add_credentials_for_backend_named": "Aggiungi credenziali per {{name}}",
   "admin": "Amministratore",
   "administrator-settings": "Impostazioni Amministratore",
   "advanced": "Avanzate",
@@ -33,6 +34,14 @@
   "api_endpoint_placeholder": "Inserisci il tuo endpoint API",
   "api_key": "API key",
   "api_key_placeholder": "Inserisci l' API key per accedere alle API LLM",
+  "api_key_required": "Inserisci una API key.",
+  "api_key_saved": "API key salvata.",
+  "api_key_source": "Origine API key",
+  "api_key_source_server": "Salvata sul server (admin)",
+  "api_key_source_server_description": "Usa una singola chiave salvata in questo backend.",
+  "api_key_source_user": "Fornita da ogni utente",
+  "api_key_source_user_description": "Ogni utente deve aggiungere la propria API key.",
+  "api_key_user_provided_reserved": "“user_provided” è riservato. Scegli “Fornita da ogni utente”.",
   "api_keys": "API key",
   "api_url": "API url",
   "apikey-added": "API key aggiunta con successo",
@@ -55,6 +64,7 @@
   "assistant-successfully-created": "Assistente creato con successo",
   "assistant-successfully-published": "Assistente pubblicato con successo",
   "assistant-successfully-updated": "Assistente modificato con successo",
+  "assistant_requires_api_key_click_named": "API key necessaria per usare {{name}}. Fai clic per aggiungerla.",
   "assistant_restored": "Assistente ripristinato con successo",
   "assistants": "Assistenti",
   "attachment_is_too_big": "La dimensione del file allegato supera i limiti consentiti",
@@ -77,6 +87,7 @@
   "change-password": "Cambia password",
   "change_owner": "Cambia proprietario",
   "change_role": "Cambia ruolo",
+  "changes_discarded": "Modifiche annullate",
   "chat": "Chat",
   "chat_is_already_shared": "La conversazione è condivisa",
   "chat_response_failure": "Si è verificato un errore durante la ricezione della risposta",
@@ -151,12 +162,14 @@
   "create_tool_field_name_label": "Nome",
   "create_tool_field_name_placeholder": "Nome visualizzato di questo tool...",
   "create_tool_field_promptfragment_placeholder": "Istruzioni aggiunte al system prompt...",
-  "image_generator_model_placeholder": "Inserisci o seleziona un modello",
-  "image_generator_supports_editing_label": "Consenti modifica immagini",
   "create_user": "Crea utente",
   "created-at": "Data creazione",
   "creative": "Creativo",
   "credentials": "Credenziali",
+  "credentials_dialog_description": "Le tue credenziali saranno immagazzinate in forma cifrata nel database e sarai l'unico a poterle utilizzare.",
+  "credentials_dialog_description_named": "Le tue credenziali saranno immagazzinate in forma cifrata nel database e sarai l'unico a poterle utilizzare.",
+  "credentials_for_backend": "Credenziali per il backend",
+  "credentials_for_backend_named": "Credenziali per {{name}}",
   "current-password": "Password Attuale",
   "custom": "Personalizzato",
   "custom-range": "Intervallo personalizzato",
@@ -184,6 +197,9 @@
   "directory-sync-message": "Il provider di sincronizzazione directory ti chiederà le seguenti informazioni per configurare la tua app SCIM.",
   "directory-sync-provider": "Provider di Sincronizzazione Directory",
   "disable-password-login": "Disabilita accesso con password",
+  "discard_changes": "Annulla modifiche",
+  "discard_changes_message": "Le modifiche non pubblicate verranno scartate e l'assistente tornerà all'ultima versione pubblicata.",
+  "discard_changes_title": "Annullare le modifiche?",
   "discovery-url": "URL di Scoperta",
   "do_you_want_to_recover_an_unsaved_version": "Vuoi recuperare una versione non salvata?",
   "docx": "DOCX",
@@ -239,14 +255,13 @@
   "high": "High",
   "id": "ID",
   "identity-provider-setup": "Trova i metadata SP per la configurazione dell'Identity Provider presso",
+  "image_generator_model_placeholder": "Inserisci o seleziona un modello",
+  "image_generator_supports_editing_label": "Consenti modifica immagini",
   "important_logicle_is_100%_unaffiliated_with_openai": "Importante: Logicle è al 100% non affiliata con OpenAI",
   "informations": "Informazioni",
   "insert-xml-describing-saml-provider": "Inserisci l'XML che descrive il provider SAML",
   "insert_a_conversation_starter_placeholder": "Inserisci un inizio di conversazione...",
   "insert_a_tag_and_press_enter": "Inserisci un tag e premi invio",
-  "tag_add": "Aggiungi \"{{tag}}\"",
-  "tag_existing": "Tag esistenti",
-  "tag_no_suggestions": "Nessun suggerimento",
   "insert_apikey_placeholder": "Inserisci un API key...",
   "insert_apiurl_or_leave_blank_for_default": "Inserisci un API url, o lascia vuoto per accettare il default",
   "insert_gcp_credentials_placeholder": "Inserisci le credenziali GCP...",
@@ -322,6 +337,7 @@
   "no_files_uploaded": "Nessun file uploadato",
   "no_filter": "Non filtrare",
   "no_such_user": "Utente non trovato",
+  "no_user_secrets": "Nessun segreto salvato.",
   "no_users_found": "Nessun utente trovato",
   "none": "Nessuno",
   "not_authenticated": "Non autenticato",
@@ -385,6 +401,8 @@
   "remove-workspace": "Rimuovi Workspace",
   "remove-workspace-confirmation": "Sei sicuro di voler eliminare il workspace? Eliminare il workspace eliminerà tutte le risorse e i dati associati per sempre.",
   "remove-workspace-warning": "Eliminare il workspace eliminerà tutte le risorse e i dati associati per sempre. Questa azione non può essere annullata.",
+  "remove_secret_confirmation": "Stai per rimuovere “{{label}}”. Questa azione non può essere annullata.",
+  "remove_secret_title": "Rimuovere il segreto?",
   "rename": "Rinomina",
   "resend-this-message": "Invia di nuovo questo messaggio",
   "reset-password": "Reimposta Password",
@@ -410,6 +428,12 @@
   "search_placeholder": "Cerca...",
   "search_workspaces...": "Cerca workspace...",
   "searching": "Ricerca in corso",
+  "secret_configured": "Segreto configurato.",
+  "secret_context": "Contesto",
+  "secret_name_required": "Inserisci un nome.",
+  "secret_removed": "Segreto rimosso.",
+  "secret_unreadable": "Il segreto salvato deve essere reinserito.",
+  "secrets": "Segreti",
   "select-auth-mode": "Seleziona modalità di autenticazione",
   "select-members-to-add": "Seleziona membri del workspace",
   "select-role-placeholder": "Seleziona un ruolo...",
@@ -433,10 +457,6 @@
   "share_with_workspace": "Condividi con il workspace",
   "sharing": "Condivisione",
   "sharing_settings": "Impostazioni condivisione",
-  "discard_changes": "Annulla modifiche",
-  "discard_changes_title": "Annullare le modifiche?",
-  "discard_changes_message": "Le modifiche non pubblicate verranno scartate e l'assistente tornerà all'ultima versione pubblicata.",
-  "changes_discarded": "Modifiche annullate",
   "show-in-sidebar": "Mostra nella barra laterale",
   "show_icons_in_chatbar": "Mostra icone nella barra delle chat",
   "show_sidebar": "Mostra barra laterale",
@@ -485,6 +505,9 @@
   "table-column-sso-user": "Utente SSO",
   "table-column-type": "Tipo",
   "table-column-user-role": "Ruolo",
+  "tag_add": "Aggiungi \"{{tag}}\"",
+  "tag_existing": "Tag esistenti",
+  "tag_no_suggestions": "Nessun suggerimento",
   "tags": "Etichette",
   "temperature": "Temperatura",
   "temperature-help": "Valori più alti come 0.8 rendono l'output più casuale, mentre valori più bassi come 0.2 lo rendono più focalizzato e deterministico.",
